--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "bootstrap": "4.6.0",
+    "date-fns": "^2.23.0",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.6.3",
+    "react-dom": "17.0.2",
+    "react-lazyload": "^3.2.0",
+    "sass": "^1.41.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
