--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "bootstrap": "4.6.0",
+    "bootstrap": "^5.1.1",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-bootstrap": "^1.6.3",
+    "react-bootstrap": "2.0.0-beta.6",
     "react-dom": "17.0.2",
     "react-lazyload": "^3.2.0",
     "sass": "^1.41.0"
