--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "react-bootstrap": "2.0.0-beta.6",
     "react-dom": "17.0.2",
     "react-lazyload": "^3.2.0",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1",
     "sass": "^1.41.0"
   },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
-  }
+  "devDependencies": {}
 }
