--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-bootstrap": "2.0.0-beta.6",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
     "react-lazyload": "^3.2.0",
     "remark": "13.0.0",
