update netlify cms

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,8 +13,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Metatitle", name: "metatitle", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
-      - { label: "Type", name: "type", widget: "string" }
-      - { label: "Category", name: "cateogry", widget: "string" }
       - {
           label: "Publish Date",
           name: "date",
@@ -22,4 +20,6 @@ collections:
           date_format: "YYYY-MM-DD",
         }
       - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Category", name: "category", widget: "string" }
+      - { label: "Type", name: "type", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
