--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.1",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
