--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-lazyload": "^3.2.0",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
