--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@netlify/plugin-nextjs": "^4.30.3",
     "bootstrap": "^5.1.1",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
